foodsupplier/manifests/food-supplier-service-static-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: food-supplier-web
  labels:
    app: food-supplier
spec:
  selector:
    app: food-supplier-web
    tier: web
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: "YOUR.IP.ADDRESS.HERE"
