foodsupplier/manifests/food-supplier-ingress-static-ip.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: food-supplier-web
  annotations:
    kubernetes.io/ingress.global-static-ip-name: food-supplier-ip
  labels:
    app: food-supplier
spec:
  backend:
    serviceName: food-supplier-backend
    servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: food-supplier-web-backend
  labels:
    app: food-supplier
spec:
  type: NodePort
  selector:
    app: food-supplier
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
